failed_attempts/attempt2/manifests/ingress/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: kube-system
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: kibana
          servicePort: 5601
      - path: /elasticsearch
        backend:
          serviceName: elasticsearch
          servicePort: 9200
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress
  labels:
    app: nginx-ingress
spec:
  type: LoadBalancer
  ports:
  - port: 80
    name: http
  # - port: 443
   #  name: https
  selector:
    service: kibana
